# mindbend

./: Cargo.toml  MindBend.md  README.md  mindbend.md
sampleprog/: accept_a_num_and_print.mb  attempt_access_primitive_gates_closed.mb  attempt_access_primitive_in_cells_region.mb  attempt_access_primitive_when_gates_closed.mb  attempt_non_function_primitive_massacre.mb  attempt_repeat_cell_in_chain_leach.mb  attempt_to_access_cell_in_layers_region.mb  attempt_to_access_cell_in_layers_region2.mb  attempt_to_drill_in_cells_region.mb  attempt_to_leach_expr_onto_cell_after_leached_away.mb  attempt_to_repeat_cell_in_leach.mb  attempt_to_use_expr_in_arg_cell_after_massacre.mb  chain_leach_without_ending_massacre.mb  conditional_jump_inifinite_loop.mb  conditional_jump_no_loop.mb  infinitely_print_1.mb  jump_to_non_existent_label.mb  malformed_leach_expression.mb  print1.mb  print1to5.mb  print2.mb  printA.mb
src/: codegen.rs  errors.rs  lexer.rs  main.rs  parser.rs  tests.rs
