[package]
name = "mindbend"
version = "0.1.0"
authors = ["Demilade Sonuga <sonugademilade8703@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llvm-sys = "120"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"] }
clap = "2.33"
lazy_static = "1.4.0"
assert_cmd = "2.0.4"
predicates = "2.1.1"
